# EosNet

./: .gitignore  README.md  convert_to_extxyz.py  predict.py  train.py  train_mlip.py
docs/: multi-task-mlip-plan.md
eosnet/: calculator.py  data.py  mlip.py
eosnet/fp/: __init__.py  gom.py
fpcnn/: data.py  model.py
lammps/: CMakeLists.txt  README.md  in.eosnet_example  pair_eosnet.cpp  pair_eosnet.h
results/MP2018_Eform/: MP2018_Eform_log.txt  checkpoint.pth.tar  model_best.pth.tar  test_results.csv  train_results.csv
results/MP2019_Eform/: MP2019_Eform_log.txt  checkpoint.pth.tar  model_best.pth.tar  test_results.csv
results/MP2024_BGAP/: MP2024_BGAP_log.txt  checkpoint.pth.tar  model_best.pth.tar  test_results.csv
results/MP2024_Eform/: MP2024_Eform_log.txt  checkpoint.pth.tar  model_best.pth.tar  test_results.csv
results/MP_ALL_BGAP/: MP_ALL_BGAP_log.txt  checkpoint.pth.tar  model_best.pth.tar  test_results.csv  train_results.csv
results/MP_Eform/: MP_Eform_log.txt  checkpoint.pth.tar  model_best.pth.tar  test_results.csv  train_results.csv
results/SiGe_Doping_BGAP/: SiGe_BGAP_log.txt  checkpoint.pth.tar  model_best.pth.tar  test_results.csv  train_results.csv
results/SiGe_Doping_BGAP_2/: SiGe_BGAP_log.txt  checkpoint.pth.tar  model_best.pth.tar  test_results.csv  train_results.csv
results/SiGe_Doping_BGAP_2_FT/: SiGe_Doping_BGAP_2_log.txt  checkpoint_ft.pth.tar  combined_results.csv  ft_test_results.csv  ft_train_results.csv  id_prop_to_pred.csv  id_prop_to_train.csv  model_ft_best.pth.tar  target_predicted.csv
results/SiGe_Doping_BGAP_FT/: SiGe_Doping_BGAP_log.txt  checkpoint_ft.pth.tar  combined_results.csv  ft_test_results.csv  ft_train_results.csv  id_prop_to_pred.csv  id_prop_to_train.csv  model_ft_best.pth.tar  target_predicted.csv
scripts/: build_lammps_eosnet.sh  combine_results.sh  deploy_for_lammps.py  export_and_test.sh  rnd_pick.sh  run_lammps_test.sh
